<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skin_chat_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_titile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"

        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/iv_titile"
        android:background="#FFF"
        android:hint="@string/user"
        android:paddingLeft="10dp" />
    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_username"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:orientation="horizontal"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ll_line"
        android:background="#FFF"
        android:hint="@string/password"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_margin="20dp"
        android:background="@drawable/selector"
        android:text="@string/login"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tv_cannot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/margin_left"
        android:text="@string/refuse"
        android:textColor="@android:color/holo_blue_bright"/>

    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/margin_right"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/register" />

</RelativeLayout>
